# onote

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  site.yml
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/: .nojekyll
site/scripts/: build-downloads.mjs  build-pdf.sh
site/src/components/: BaseHead.astro  CopyButton.astro  FeatureCard.astro  Footer.astro  ManualDownload.astro  Nav.astro  PageDownload.astro  Search.astro  Sidebar.astro  TerminalPane.astro  TerminalShot.astro  ThemeToggle.astro
site/src/content/: config.ts
site/src/content/manual/: architecture.md  backup.md  commands.md  configuration.md  editor.md  explorer.md  getting-started.md  guarantees.md  images.md  install.md  keymap.md  layout.md  share.md  theming.md
site/src/layouts/: LandingLayout.astro  ManualLayout.astro
site/src/lib/: nav.ts
site/src/pages/: 404.astro  index.astro
site/src/pages/manual/: [slug].astro  index.astro
site/src/scripts/: theme-init.ts
site/src/styles/: base.css  catppuccin.css  terminal.css
site/typst/: manual.typ
src/: config.rs  lib.rs  main.rs
src/application/: mod.rs  ops.rs
src/cli/: mod.rs
src/domain/: attachment.rs  backup.rs  errors.rs  mod.rs  note.rs  session.rs  share.rs  slug.rs  vault.rs
src/infra/: attachment_store.rs  clipboard.rs  clock.rs  file_watch.rs  filesystem_vault.rs  git_cli.rs  http_share.rs  index_location.rs  logging.rs  markdown.rs  mod.rs  null_index.rs  obsidian_uri.rs  sqlite_index.rs  terminal_image.rs
src/ports/: mod.rs
src/ui/: mod.rs
src/ui/tui/: editor.rs  keymap.rs  layout.rs  mod.rs  note_drawer.rs  render.rs  theme.rs  wrap.rs
tests/: app_flow.rs
