[package]
name = "onote"
version = "0.4.1"
edition = "2021"
rust-version = "1.82"
description = "Terminal-native, Obsidian-compatible Markdown vault client"
license = "MIT"
publish = false
authors = ["onote contributors"]
repository = "https://github.com/AlanSynn/onote"
homepage = "https://github.com/AlanSynn/onote"
readme = "README.md"
keywords = ["markdown", "obsidian", "terminal", "tui", "notes"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "onote"
path = "src/main.rs"

# No feature flags: ratatui/axum/image are core to the single binary. Declaring
# them as optional features without `cfg(feature)` gates would be misleading
# metadata (a `--no-default-features` build would still pull them in).

[dependencies]
# Markdown
comrak = { version = "0.34", features = ["shortcodes"] }

# Config / serialization / paths
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
shellexpand = "3"

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Search / index
rusqlite = { version = "0.32", features = ["bundled"] }
nucleo-matcher = "0.3"

# File watching
notify = "7"
notify-debouncer-mini = { version = "0.7", default-features = false }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Images
image = "0.25"
ratatui-image = "6"
unicode-width = "0.2"
# Grapheme-cluster segmentation for selection endpoints (CLAUDE.md §3.1, C7):
# a ZWJ emoji or `e`+combining-mark is one selectable unit.
unicode-segmentation = "1.12"

# Clipboard
arboard = "3"

# Share server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
qr2term = "0.3"

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"

# Cross-platform CSPRNG for the share server's tokenized URL (Unix + Windows).
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

# Debian package metadata for `cargo deb` (produces the portable Linux `.deb` in
# the Release workflow's `linux-portable` job). The `.deb` wraps the STATIC musl
# binary, so it has NO runtime dependencies (glibc-independent — installs on any
# Debian/Ubuntu/Mint). NOTE: specifying `assets` REPLACES cargo-deb's default
# asset set, so the binary MUST be listed explicitly here or the `.deb` ships
# docs only. `target/release/onote` is a cargo-deb SPECIAL PREFIX — it is
# rewritten to the actual target dir (e.g. target/x86_64-unknown-linux-musl) at
# package time when `--target` is passed.
[package.metadata.deb]
maintainer = "AlanSynn <noreply@github.com>"
copyright = "2026, onote contributors"
depends = ""
section = "utils"
priority = "optional"
extended-description-file = "README.md"
assets = [
    ["target/release/onote", "usr/bin/onote", "755"],
    ["README.md", "usr/share/doc/onote/", "644"],
    ["LICENSE", "usr/share/doc/onote/", "644"],
]

# Dev profile: `line-tables-only` keeps panic `file:line` backtraces (which
# matter here because `panic = "abort"` is OFF — see below) while dropping the
# per-dependency variable debuginfo that bloats target/debug to ~12G. Dev-only;
# CI builds release.
[profile.dev]
debug = "line-tables-only"

# Distribution profile (`CLAUDE.md` §2.1 single-binary `curl` install). LTO +
# single codegen unit shrink the binary and speed startup; `strip` drops debug
# symbols. NOTE: `panic = "abort"` is intentionally NOT set — the TUI relies on
# `TerminalGuard::drop` (unwind) to restore the terminal on a panic, so abort
# would strand the user in raw alternate-screen mode if a panic ever fires.
[profile.release]
lto = true
codegen-units = 1
strip = true
